fix: keep tooltip from getting too tall

--- a/app/Resources/assets/sass/overrides.scss
+++ b/app/Resources/assets/sass/overrides.scss
@@ -64,3 +64,10 @@ span.fancytree-node {
   font-size: inherit;
   line-height: inherit;
 }
+
+/* Tooltips */
+.tooltip {
+  max-height: 300px;
+  max-width: 300px;
+  overflow: hidden;
+}
